--- a/static/style.css
+++ b/static/style.css
@@ -33,9 +33,10 @@ ul {
     columns: 2;
 }
 
-.beneficios ul li, .mais {
+.beneficios .mais, ul li{
     border: 2px solid gray;
     border-radius: 15px;
+    margin-top: 15px;
 }
 
 video {
@@ -44,13 +45,6 @@ video {
 
 .mais ul {
     columns: 2;
-}
-
-.mais ul li {
-    margin: auto;
-    border: 2px solid gray;
-    border-radius: 15px;
-    padding: 5px;
 }
 
 .flex {
@@ -73,5 +67,5 @@ input, select{
     border-radius: 5px;
 }
 section{
-    padding: 15px;
+    padding: 5px;
 }
