--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,11 @@
 * {
+    text-align: justify;
+    padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+body {}
 
 body,
 header {
@@ -33,7 +37,7 @@ ul {
 
 li {
     display: inline-flex;
-    margin-top: 25px;
+margin: 15px;
 }
 
 .beneficios .mais,
@@ -57,13 +61,14 @@ video {
     display: flex;
 }
 
-img#logoAcai {
-    sec margin: auto;
+.logoAcai {
+    display: block;
+    margin: auto;
     max-width: 285px;
 }
 
 .flex-mobile {
-    display: flex;
+    display: ;
 }
 
 @media (max-width: 700px) {
@@ -87,4 +92,11 @@ select {
 section {
     padding: 5px;
     margin: auto;
+}
+label {
+    display: flex;
+}
+label p{
+    text-align: justify;
+    font-size: medium;
 }
