--- a/static/style.css
+++ b/static/style.css
@@ -118,3 +118,7 @@ padding: 5px;
 section{
     background-color: rgba(137, 43, 226, 0.205);
 }
+.problema{
+    height: 45vh;
+    padding: 15px;
+}
