--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,7 @@ ul {
 li {
     display: inline-flex;
     margin: 15px;
+    padding: 15px;
 }
 
 .beneficios .mais,
@@ -123,4 +124,30 @@ section {
 section#secHeader {
     background-color: white;
     padding: 15px;
+}
+
+section#AcaiBot {
+    max-width: 80%;
+    margin: auto;
+}
+
+section#AcaiBot li {
+    margin: auto;
+    text-align: center;
+}
+
+button#btnCardapio {
+    display: block;
+    margin: auto;
+    padding: 15px;
+}
+button#btnCardapio a{
+    
+}
+div#listaDeSabores img{
+    display: block;
+    max-width: 50px;
+}
+section#AcaiBot {
+    background-color: w;
 }
