--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
-  <img src="../static/logo Acai.png" alt="">
+  <picture style="padding: 15px;">
+<a href="../index.html">
+  <img src="../static/logo Acai.png" style="max-width: 184px;" alt="">
+</a>
+  </picture>
   <div class="interface">
     <h1>Teste o AÇAI BOT sem pagar nada</h1>
-    <p>Faça o seu cadastro para testar a Anota AI</p>
+    <p>Faça o seu cadastro para testar a Açai Bot</p>
     <form action="#">
       <ul>
         <li>
@@ -51,8 +55,20 @@
           </label>
         </div>
       </ul>
-      <button type="submit">Enviar</button>
     </form>
+    <section style="background-color: blueviolet;">
+      <button style="margin: auto; display: block;">
+        <a href="https://maper.info/29j736" target="_blank" style="padding: 15px;">
+          Enviar
+        </a>
+      </button>
+    </section>
+    <footer style="align-items: center; justify-content: center;">
+      <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">infoprodutos.org</a>
+      © 2024 | Todos os
+      direitos
+      reservados
+    </footer>
   </div>
 </body>
 
