--- a/templates/cardapio.html
+++ b/templates/cardapio.html
@@ -2,72 +2,84 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
-    <title>Sabores de Sorvete</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../static/style.css">
+        <title>Sabores de Sorvete</title>
 </head>
 
 <body>
-    <video muted loop autoplay>
-        <source media="(min-width: 501px)" src="../static/AÇAI BOT.mp4"
-            style="video::internal-media-controls{display: ;}">
-        <source media="(max-width: 500px)" src="../static/AÇAI BOT mobille.mp4"
-            style="video::internal-media-controls{display: ;}">
-    </video>
-    <button id="btnCardapio">
-        <a
-            href="https://api.whatsapp.com/send?phone=553499896614&text=Ol%C3%A1,%20eu%20quero%20fazer%20um%20pedido%20!">
-            Fazer meu pedido
-        </a>
-    </button>
-    <h2>Sabores de Sorvete</h2>
-    <div id="listaDeSabores">
-          <ul>
-            <li>
-                <img src="../static/barra-de-chocolate.png" alt="">
-                            Chocolate
-                </li>
+        <picture>
+                <a href="../index.html">
+                        <img src="/static/logo Acai.png" style="max-width: 185px; display: block;" alt="">
+                </a>
+                <p>
+                        Um bom motivo para adoçar seu dia
+                </p>
+        </picture>
+        <video muted loop autoplay>
+                <source media="(min-width: 501px)" src="../static/AÇAI BOT.mp4"
+                        style="video::internal-media-controls{display: ;}">
+                <source media="(max-width: 500px)" src="../static/AÇAI BOT mobille.mp4"
+                        style="video::internal-media-controls{display: ;}">
+        </video>
+        <button id="btnCardapio">
+                <a
+                        href="https://api.whatsapp.com/send?phone=553499896614&text=Ol%C3%A1,%20eu%20quero%20fazer%20um%20pedido%20!">
+                        Fazer meu pedido
+                </a>
+        </button>
+        <h2>Sabores de Sorvete</h2>
+        <div id="listaDeSabores">
+                <ul>
                         <li>
-                <img src="../static/baunilha.png" alt="">
-                            Baunilha
-                </li>
+                                <img src="../static/barra-de-chocolate.png" alt="">
+                                Chocolate
+                        </li>
                         <li>
-                <img src="../static/morango.png" alt="">
-                            Morango
-                </li>
+                                <img src="../static/baunilha.png" alt="">
+                                Baunilha
+                        </li>
                         <li>
-                <img src="../static/floco-de-neve.png" alt="">
-                            Flocos
-                </li>
+                                <img src="../static/morango.png" alt="">
+                                Morango
+                        </li>
                         <li>
-                <img src="../static/sorvete.png" alt="">
-                            Napolitano
-                </li>
+                                <img src="../static/floco-de-neve.png" alt="">
+                                Flocos
+                        </li>
                         <li>
-                <img src="../static/coco.png" alt="">
-                            Coco
-                </li>
+                                <img src="../static/sorvete.png" alt="">
+                                Napolitano
+                        </li>
                         <li>
-                <img src="../static/milho.png" alt="">
-                            Milho
-                </li>
+                                <img src="../static/coco.png" alt="">
+                                Coco
+                        </li>
                         <li>
-                <img src="../static/cookie.png" alt="">
-                            Cookies and Cream
-                </li>
+                                <img src="../static/milho.png" alt="">
+                                Milho
+                        </li>
                         <li>
-                <img src="../static/doce-de-leite.png" alt="">
-                            Doce de leite
-                </li>
+                                <img src="../static/cookie.png" alt="">
+                                Cookies and Cream
+                        </li>
                         <li>
-                <img src="../static/fruta-milagrosa.png" alt="">
-                            Frutas exóticas
-                </li>
-          </ul>
-    </div>
-      <footer>
-    </footer>
+                                <img src="../static/doce-de-leite.png" alt="">
+                                Doce de leite
+                        </li>
+                        <li>
+                                <img src="../static/fruta-milagrosa.png" alt="">
+                                Frutas exóticas
+                        </li>
+                </ul>
+        </div>
+        <footer style="align-items: center; justify-content: center;">
+                <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">infoprodutos.org</a>
+                © 2024 | Todos os
+                direitos
+                reservados
+        </footer>
 </body>
 
 </html>
