--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <picture style="padding: 15px;">
-<a href="../index.html">
-  <img src="../static/logo Acai.png" style="max-width: 184px;" alt="">
-</a>
+  <picture id="logoAcai">
+    <a href="../index.html">
+      <img src="../static/logo Acai.png" style="max-width: 184px;" alt="">
+    </a>
   </picture>
   <div class="interface">
     <h1>Teste o AÇAI BOT sem pagar nada</h1>
@@ -56,7 +56,7 @@
         </div>
       </ul>
     </form>
-    <section style="background-color: blueviolet;">
+    <section>
       <button style="margin: auto; display: block;">
         <a href="https://maper.info/29j736" target="_blank" style="padding: 15px;">
           Enviar
@@ -64,10 +64,11 @@
       </button>
     </section>
     <footer style="align-items: center; justify-content: center;">
-      <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">infoprodutos.org</a>
-      © 2024 | Todos os
-      direitos
-      reservados
+      <p>
+        <a href="https://pablo-kennediy.github.io/curriculo/" style="color: black;">
+          infoprodutos.org © 2024 | Todos os direitos reservados
+        </a>
+      </p>
     </footer>
   </div>
 </body>
