--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,9 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+footer a, p{
+    font-size: small;
+}
 body,
 header {
     width: 100%;
@@ -146,4 +148,9 @@ button#btnCardapio a{
 div#listaDeSabores img{
     display: block;
     max-width: 50px;
+}
+picture#logoAcai img {
+    display: block;
+    margin: auto;
+    max-width: 185px;
 }
